# demo-s3de

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  meson.build
Shader/: lighting.fs  lighting.gs  lighting.vs  skybox.fs  skybox.vs  texture.frag
data/: config
src/: main.cpp
src/utils/: FileManager.cpp  FileManager.h  Interpolate.hpp  Loader.cpp  Loader.h  MemoryManager.hpp
tools/ci/: clang.sh  gcc.sh
